[project]
name = "comfyui-contactsheet"
description = "Preprocessor Contact Sheet for ComfyUI - runs all ControlNet preprocessors at once, displays them in a visual grid, and lets you inject AIO or dedicated preprocessor workflows with click-to-place."
version = "2.0.0"
license = { file = "LICENSE" }
dependencies = ["Pillow", "numpy", "torch"]

[project.urls]
Repository = "https://github.com/g4brielelori-byte/Custom-Nodes"

[tool.comfy]
PublisherId = "GabrieleLoriAI"
DisplayName = "Preprocessor Contact Sheet"
Icon = ""